# meanwhile-sametime-tears

./: .gitignore  .travis.yml  README.md  autogen.sh  configure.ac  meanwhile.pc  meanwhile.spec
patches/: series
samples/: Makefile.am
src/: mw_debug.c  srvc_ft.c
